# cc-approval

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_science.yml
notebooks/: exploration.ipynb
src/cc_approval/: __init__.py  __main__.py
src/cc_approval/pipelines/data_preprocessing/: nodes.py  pipeline.py
src/cc_approval/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
